k8s/blog/01-blog-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: blog
  namespace: blog
  labels:
    app: blog

spec:
  replicas: 2

  selector:
    matchLabels:
      app: blog

  template:
    metadata:
      labels:
        app: blog

    spec:
      containers:
        - name: blog
          image: ghcr.io/maackia/blog:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 3000

          startupProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
