k8s/blog/02-blog-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: blog
  namespace: blog
  labels:
    app: blog

spec:
  type: ClusterIP

  selector:
    app: blog

  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
