k8s/blog/03-blog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  namespace: blog
spec:
  ingressClassName: traefik
  rules:
    - host: blog.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blog
                port:
                  name: http
